metadata/force-app/main/default/objects/CustomName_eELZP__c/CustomName_eELZP__c.object-meta.xml
<CustomObject>
    <description>Description_tTHZR</description>
    <label>CustomLabel_uiLQc</label>
    <nameField>
        <label>CustomLabel_uiLQc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_uiLQcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>