metadata/force-app/main/default/objects/CustomName_eELZP__c/fields/CustomField_jKsBW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jKsBW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpcZJl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>