metadata/force-app/main/default/objects/CustomName_eELZP__c/fields/CustomField_KlEvb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KlEvb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqxogk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>